# agentic-banking-mcp-demo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: 00-project-structure.mdc  01-code-standards.mdc  02-architecture-standards.mdc  03-mcp-standards.mdc  04-testing-standards.mdc  05-workflow.mdc  06-git-workflow.mdc
data/: bank_services.md
docs/: ARCHITECTURE.md  DECISIONS.md  INDEX.md  PROGRESS.md
docs/plans/: 01-banking-agent-mcp-demo.md  02-db-paths-and-bank-services.md  03-file-logging.md  04-streaming-final-response.md  05-router-structured-output.md
scripts/: seed_db.py
src/adapters/: agent_loop.py  config.py  database.py  llm_client.py  llm_logging.py  llm_streaming.py  logging_setup.py  mcp_client.py  memory.py  paths.py  router.py  tool_schema.py
src/cli/: repl.py
src/core/: constants.py  errors.py  models.py  money.py
src/mcp_servers/: banking_server.py
src/operations/: banking.py
tests/adapters/: test_llm_streaming.py  test_logging_setup.py  test_memory.py  test_paths.py  test_router.py
tests/core/: test_money.py
tests/integration/: conftest.py  test_mcp_banking.py
tests/operations/: test_banking.py
