[project]
name = "agentic-banking-mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]
extend-include = ["main.py"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TC",
    "TRY",
    "S",
    "D",
    "PLC",
    "PLR",
    "PLW",
    "EXE",
]
ignore = [
    "S101", # assert allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"src/mcp_servers/tools_*.py" = ["TC002"]
"tests/**/*.py" = ["D", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["core", "operations", "adapters", "mcp_servers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
